[package]
name = "twp-types"
version = "0.1.0"
edition = "2024"
authors = ["Dominik Wilkowski <hi@dominik-wilkowski.com>"]
description = "A CLI tool to process liquid files using Rust/WASM"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
