[package]
name = "liquid-docs"
version = "1.0.0"
edition = "2024"
authors = ["Dominik Wilkowski <hi@dominik-wilkowski.com>"]
description = "A parser for Shopify liquid doc tags using Rust/WASM"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = { version = "0.5", features = ["js"] }
web-sys = { version = "0.3", features = ["console"] }